tests/final/expect/15__torture__malformed_unterminated_string_no_crash.diag
Diagnostics:
Error: Unterminated string literal at tests/final/cases/15__torture__malformed_unterminated_string_no_crash.c:2:21 (got '"')
